# pearbrowser-desktop

./: .gitignore  README.md  index.html  index.js  package-lock.json  package.json  styles.css
appling/: CMakeLists.txt
backend/: app-manager.js  bip39-wordlist.js  catalog-manager.js  constants.js  contacts.js  http-bridge.js  hyper-proxy.js  identity.js  index.js  package.json  pear-adapter.cjs  pear-bridge.js  profile.js  relay-client.js  rpc.js  site-manager.js  user-data.js
ui/: boot.js  logo.js  main.js  rpc-client.js  shell.js
